Fixes aggregation benchmarks
Aggregations must be resolved by signature